fix login/logout/register auth

--- a/client/src/routes/ProfilePage/ProfilePage.scss
+++ b/client/src/routes/ProfilePage/ProfilePage.scss
@@ -53,6 +53,16 @@
                     gap: 20px;
                 }
 
+                button {
+                    width: 10px;
+                    background-color: teal;
+                    border: none;
+                    color: white;
+                    padding: 10px 20px;
+                    cursor: pointer;
+                    border-radius: 5px;
+                }
+
                 img {
                     height: 40px;
                     width: 40px;
