--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -113,6 +113,7 @@
                 flex: 3;
                 height: 100%;
                 border: none;
+                padding: 20px;
             }
 
             button {
