--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -31,6 +31,8 @@ nav {
             display: flex;
             gap: 10px;
 
+            cursor: pointer;
+
             img {
                 width: 50px;
                 height: 50px;
